--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="541.0" prefWidth="703.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="541.0" prefWidth="703.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="altrdgenetics.callTimeTracker.sceneController.MainWindowSceneController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -37,11 +37,15 @@
    <center>
       <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <top>
-            <AnchorPane prefHeight="65.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="50.0" prefWidth="703.0" BorderPane.alignment="CENTER">
                <children>
-                  <ChoiceBox layoutX="79.0" layoutY="21.0" prefHeight="25.0" prefWidth="383.0" AnchorPane.leftAnchor="79.0" />
-                  <Button layoutX="589.0" layoutY="13.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" text="Start Call" AnchorPane.rightAnchor="14.0" />
-                  <Label layoutX="14.0" layoutY="25.0" text="Company:" AnchorPane.leftAnchor="14.0" />
+                  <ChoiceBox layoutX="79.0" layoutY="21.0" prefHeight="25.0" prefWidth="275.0" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="22.0" />
+                  <Button fx:id="RecordButton" layoutX="589.0" layoutY="13.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleCallButtonAction" text="Start Call" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0" />
+                  <Label layoutX="14.0" layoutY="25.0" text="Company:" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="10.0" />
+                  <Label fx:id="TimerLabel" contentDisplay="RIGHT" layoutX="430.0" layoutY="14.0" prefHeight="37.0" prefWidth="142.0" textAlignment="RIGHT" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font></Label>
                </children>
             </AnchorPane>
          </top>
