--- a/src/main/resources/fxml/MainWindow.fxml
+++ b/src/main/resources/fxml/MainWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -12,49 +13,53 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="541.0" prefWidth="703.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="altrdgenetics.callTimeTracker.sceneController.MainWindowSceneController">
-   <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
-   <center>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <top>
-            <AnchorPane prefHeight="50.0" prefWidth="703.0" BorderPane.alignment="CENTER">
-               <children>
-                  <ChoiceBox layoutX="79.0" layoutY="21.0" prefHeight="25.0" prefWidth="275.0" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="22.0" />
-                  <Button fx:id="RecordButton" layoutX="589.0" layoutY="13.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleCallButtonAction" text="Start Call" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0" />
-                  <Label layoutX="14.0" layoutY="25.0" text="Company:" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="10.0" />
-                  <Label fx:id="TimerLabel" contentDisplay="RIGHT" layoutX="430.0" layoutY="14.0" prefHeight="37.0" prefWidth="142.0" textAlignment="RIGHT" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font></Label>
-               </children>
-            </AnchorPane>
-         </top>
-         <center>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-               <children>
-                  <TableView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
-               </children>
-            </AnchorPane>
-         </center>
-      </BorderPane>
-   </center>
+    <stylesheets>
+        <URL value="@/styles/Styles.css"/>
+    </stylesheets>
+    <top>
+        <MenuBar BorderPane.alignment="CENTER">
+            <menus>
+                <Menu mnemonicParsing="false" text="File">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Close" />
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                    <items>
+                        <MenuItem fx:id="CompanyMaintenanceMenuItem" mnemonicParsing="false" onAction="#handleCompanyMaintenanceMenuItem" text="Company Maintenance" />
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="About" />
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+    </top>
+    <center>
+        <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <top>
+                <AnchorPane prefHeight="50.0" prefWidth="703.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <ChoiceBox layoutX="79.0" layoutY="21.0" prefHeight="25.0" prefWidth="275.0" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="22.0" />
+                        <Button fx:id="RecordButton" layoutX="589.0" layoutY="13.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleCallButtonAction" text="Start Call" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0" />
+                        <Label layoutX="14.0" layoutY="25.0" text="Company:" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="10.0" />
+                        <Label fx:id="TimerLabel" contentDisplay="RIGHT" layoutX="430.0" layoutY="14.0" prefHeight="37.0" prefWidth="142.0" textAlignment="RIGHT" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0">
+                            <font>
+                                <Font name="System Bold" size="18.0" />
+                            </font>
+                        </Label>
+                    </children>
+                </AnchorPane>
+            </top>
+            <center>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <TableView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                    </children>
+                </AnchorPane>
+            </center>
+        </BorderPane>
+    </center>
 </BorderPane>
