--- a/src/main/resources/fxml/CompanyMaintenanceScene.fxml
+++ b/src/main/resources/fxml/CompanyMaintenanceScene.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,11 +14,19 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="622.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="altrdgenetics.callTimeTracker.sceneController.CompanyMaintenanceSceneController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="altrdgenetics.callTimeTracker.sceneController.CompanyMaintenanceSceneController">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView layoutX="382.0" layoutY="30.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0" />
+            <TableView fx:id="searchTable" layoutX="382.0" layoutY="30.0" onMouseClicked="#tableListener" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
+               <columns>
+                  <TableColumn fx:id="iDColumn" maxWidth="0.0" minWidth="0.0" prefWidth="0.0" text="Object" />
+                  <TableColumn fx:id="activeColumn" minWidth="40.0" prefWidth="40.0" />
+                  <TableColumn fx:id="companyColumn" maxWidth="1.7976931348623157E308" prefWidth="589.0" text="Company Name" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy></TableView>
          </children>
       </AnchorPane>
    </center>
@@ -52,8 +61,8 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                   </Label>
-                  <TextField promptText="Enter Search Criteria..." GridPane.columnIndex="1" GridPane.columnSpan="7" GridPane.rowIndex="1" />
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="New" GridPane.columnIndex="8" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <TextField fx:id="searchTextField" onInputMethodTextChanged="#search" promptText="Enter Search Criteria..." GridPane.columnIndex="1" GridPane.columnSpan="7" GridPane.rowIndex="1" />
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addNewCompanyButtonAction" prefHeight="25.0" prefWidth="100.0" text="New" GridPane.columnIndex="8" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
          </children>
@@ -63,7 +72,7 @@
       <ButtonBar buttonMinWidth="100.0" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <buttons>
             <Button mnemonicParsing="false" text="Close" ButtonBar.buttonData="LEFT" />
-            <Button mnemonicParsing="false" text="Edit" ButtonBar.buttonData="RIGHT" />
+            <Button mnemonicParsing="false" onAction="#editCompanyButtonAction" text="Edit" ButtonBar.buttonData="RIGHT" />
         </buttons>
          <BorderPane.margin>
             <Insets />
