--- a/src/main/resources/fxml/CompanyMaintenanceScene.fxml
+++ b/src/main/resources/fxml/CompanyMaintenanceScene.fxml
@@ -18,15 +18,13 @@
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView fx:id="searchTable" layoutX="382.0" layoutY="30.0" onMouseClicked="#tableListener" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
-               <columns>
-                  <TableColumn fx:id="iDColumn" editable="false" maxWidth="0.0" minWidth="0.0" prefWidth="0.0" text="Object" visible="false" />
+            <TableView fx:id="searchTable" editable="true" layoutX="382.0" layoutY="30.0" onMouseClicked="#tableListener" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
+                <columns>
+                    <TableColumn fx:id="iDColumn" editable="false" maxWidth="0.0" minWidth="0.0" prefWidth="0.0" text="Object" visible="false" />
                   <TableColumn fx:id="activeColumn" minWidth="35.0" prefWidth="35.0" resizable="false" />
-                  <TableColumn fx:id="companyColumn" editable="false" maxWidth="1.7976931348623157E308" prefWidth="589.0" text="Company Name" />
-               </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy></TableView>
+                    <TableColumn fx:id="companyColumn" editable="false" maxWidth="1.7976931348623157E308" prefWidth="589.0" text="Company Name" />
+                </columns>
+            </TableView>
          </children>
       </AnchorPane>
    </center>
@@ -61,7 +59,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                   </Label>
-                  <TextField fx:id="searchTextField" onKeyTyped="#search" promptText="Enter Search Criteria..." GridPane.columnIndex="1" GridPane.columnSpan="7" GridPane.rowIndex="1" />
+                  <TextField fx:id="searchTextField" onAction="#search" onInputMethodTextChanged="#search" onKeyTyped="#search" promptText="Enter Search Criteria..." GridPane.columnIndex="1" GridPane.columnSpan="7" GridPane.rowIndex="1" />
                   <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addNewCompanyButtonAction" prefHeight="25.0" prefWidth="100.0" text="New" GridPane.columnIndex="8" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
