--- a/src/main/resources/fxml/MainWindow.fxml
+++ b/src/main/resources/fxml/MainWindow.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,7 +16,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="541.0" prefWidth="703.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="altrdgenetics.callTimeTracker.sceneController.MainWindowSceneController">
     <stylesheets>
-        <URL value="@/styles/Styles.css"/>
+        <URL value="@/styles/Styles.css" />
     </stylesheets>
     <top>
         <MenuBar BorderPane.alignment="CENTER">
@@ -42,7 +44,6 @@
             <top>
                 <AnchorPane prefHeight="50.0" prefWidth="703.0" BorderPane.alignment="CENTER">
                     <children>
-                        <ChoiceBox layoutX="79.0" layoutY="21.0" prefHeight="25.0" prefWidth="275.0" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="22.0" />
                         <Button fx:id="RecordButton" layoutX="589.0" layoutY="13.0" minHeight="40.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleCallButtonAction" text="Start Call" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0" />
                         <Label layoutX="14.0" layoutY="25.0" text="Company:" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="10.0" />
                         <Label fx:id="TimerLabel" contentDisplay="RIGHT" layoutX="430.0" layoutY="14.0" prefHeight="37.0" prefWidth="142.0" textAlignment="RIGHT" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0">
@@ -50,13 +51,25 @@
                                 <Font name="System Bold" size="18.0" />
                             </font>
                         </Label>
+                  <ComboBox fx:id="CompanyComboBox" layoutX="69.0" layoutY="18.0" prefHeight="25.0" prefWidth="337.0" AnchorPane.leftAnchor="75.0">
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding>
+                  </ComboBox>
                     </children>
                 </AnchorPane>
             </top>
             <center>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <children>
-                        <TableView prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                        <TableView fx:id="mainTable" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                     <columns>
+                        <TableColumn fx:id="objectColumn" prefWidth="75.0" text="Object" visible="false" />
+                        <TableColumn fx:id="startTimeColumn" editable="false" prefWidth="114.0" text="Start Time" />
+                        <TableColumn fx:id="companyColumn" editable="false" prefWidth="178.0" text="Company" />
+                        <TableColumn fx:id="descriptionColumn" editable="false" prefWidth="202.0" text="Description" />
+                        <TableColumn fx:id="durationColumn" editable="false" prefWidth="133.0" text="Duration" />
+                     </columns></TableView>
                     </children>
                 </AnchorPane>
             </center>
