--- a/src/main/resources/fxml/MainWindow.fxml
+++ b/src/main/resources/fxml/MainWindow.fxml
@@ -23,6 +23,7 @@
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
+                  <MenuItem fx:id="NewPhoneCallMenuItem" mnemonicParsing="false" onAction="#handleNewPhoneCallMenuItem" text="Add New Phone Call" />
                         <MenuItem mnemonicParsing="false" text="Close" />
                     </items>
                 </Menu>
