--- a/src/main/resources/fxml/DetailedCallScene.fxml
+++ b/src/main/resources/fxml/DetailedCallScene.fxml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXDatePicker?>
-<?import com.jfoenix.controls.JFXTimePicker?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.SpinnerValueFactory.IntegerSpinnerValueFactory?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="487.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="altrdgenetics.callTimeTracker.sceneController.DetailedCallAddEditSceneController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="altrdgenetics.callTimeTracker.sceneController.DetailedCallAddEditSceneController">
     <stylesheets>
         <URL value="@/styles/Styles.css" />
     </stylesheets>
@@ -77,33 +79,65 @@
                         <Insets right="8.0" />
                     </padding>
                 </Label>
-                <ComboBox fx:id="companyComboBox" prefHeight="25.0" prefWidth="412.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" />
+                <ComboBox fx:id="companyComboBox" prefHeight="25.0" prefWidth="412.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" />
                 <TextField fx:id="durationTextField" disable="true" editable="false" promptText="N/A" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                 <TextArea fx:id="descriptionTextarea" prefHeight="45.0" prefWidth="371.0" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="4" GridPane.rowSpan="3">
                     <GridPane.margin>
                         <Insets bottom="10.0" top="10.0" />
                     </GridPane.margin>
                 </TextArea>
-                <JFXDatePicker fx:id="startDatePicker" defaultColor="#2196f3" promptText="Pick Start Date" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1">
-                    <GridPane.margin>
-                        <Insets right="15.0" />
-                    </GridPane.margin>
-                </JFXDatePicker>
-                <JFXDatePicker fx:id="endDatePicker" defaultColor="#2196f3" promptText="Pick End Date" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
-                    <GridPane.margin>
-                        <Insets right="15.0" />
-                    </GridPane.margin>
-                </JFXDatePicker>
-                <JFXTimePicker fx:id="startTimePicker" defaultColor="#2196f3" promptText="Pick Start Time" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="1">
-                    <GridPane.margin>
-                        <Insets right="15.0" />
-                    </GridPane.margin>
-                </JFXTimePicker>
-                <JFXTimePicker fx:id="endTimePicker" defaultColor="#2196f3" promptText="Pick Start Time" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="2">
-                    <GridPane.margin>
-                        <Insets right="15.0" />
-                    </GridPane.margin>
-                </JFXTimePicker>
+                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="229.0" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="1">
+                    <children>
+                      <DatePicker fx:id="startDatePicker" promptText="Select Date...">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                      </DatePicker>
+                        <Spinner fx:id="startTimeHourSpinner" editable="true" onMouseClicked="#setDurationTextfield" prefHeight="25.0" prefWidth="60.0">
+                            <valueFactory>
+                                <SpinnerValueFactory.IntegerSpinnerValueFactory max="23" min="0" />
+                            </valueFactory>
+                        </Spinner>
+                        <Label text=" : " />
+                        <Spinner fx:id="startTimeMinuteSpinner" editable="true" onMouseClicked="#setDurationTextfield" prefHeight="25.0" prefWidth="60.0">
+                            <valueFactory>
+                                <SpinnerValueFactory.IntegerSpinnerValueFactory max="59" min="0" />
+                            </valueFactory>
+                        </Spinner>
+                        <Label text=" : " />
+                        <Spinner fx:id="startTimeSecondSpinner" editable="true" onMouseClicked="#setDurationTextfield" prefHeight="25.0" prefWidth="60.0">
+                            <valueFactory>
+                                <SpinnerValueFactory.IntegerSpinnerValueFactory max="59" min="0" />
+                            </valueFactory>
+                        </Spinner>
+                    </children>
+                </HBox>
+                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="229.0" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="2">
+                    <children>
+                      <DatePicker fx:id="endDatePicker" onAction="#setDurationTextfield" promptText="Select Date...">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                      </DatePicker>
+                        <Spinner fx:id="endTimeHourSpinner" editable="true" onMouseClicked="#setDurationTextfield" prefHeight="25.0" prefWidth="60.0">
+                            <valueFactory>
+                                <SpinnerValueFactory.IntegerSpinnerValueFactory max="23" min="0" />
+                            </valueFactory>
+                        </Spinner>
+                        <Label text=" : " />
+                        <Spinner fx:id="endTimeMinuteSpinner" editable="true" onMouseClicked="#setDurationTextfield" prefHeight="25.0" prefWidth="60.0">
+                            <valueFactory>
+                                <SpinnerValueFactory.IntegerSpinnerValueFactory max="59" min="0" />
+                            </valueFactory>
+                        </Spinner>
+                        <Label text=" : " />
+                        <Spinner fx:id="endTimeSecondSpinner" editable="true" onMouseClicked="#setDurationTextfield" prefHeight="25.0" prefWidth="60.0">
+                            <valueFactory>
+                                <SpinnerValueFactory.IntegerSpinnerValueFactory max="59" min="0" />
+                            </valueFactory>
+                        </Spinner>
+                    </children>
+                </HBox>
             </children>
             <BorderPane.margin>
                 <Insets left="15.0" right="15.0" />
@@ -111,7 +145,7 @@
         </GridPane>
     </center>
     <bottom>
-        <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <ButtonBar prefHeight="49.0" prefWidth="504.0" BorderPane.alignment="CENTER">
             <buttons>
                 <Button fx:id="closeButton" mnemonicParsing="false" onAction="#handleClose" text="Close" ButtonBar.buttonData="LEFT" />
                 <Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonAction" text="Save" ButtonBar.buttonData="RIGHT" />
